--- a/aula-22-02/style.css
+++ b/aula-22-02/style.css
@@ -2,13 +2,9 @@
     margin: 0;
     padding: 0;
   }
-  
-  html, body {
-    height: 100%;
-    width: 100%;
-  }
-  
   body {
+    height: 100vh;
+    width: 100vw;
     display: grid;
     grid-gap: 10px;
     grid-template-rows: auto 1fr auto;
@@ -17,49 +13,46 @@
       "main"
       "footer";
   }
-  
   header {
     grid-area: header;
     text-align: center;
     padding: 20px;
     border-bottom: 2px solid #000;
+    background-color: bisque;
   }
-  
-  main {
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr 1fr;
+  main { 
     grid-area: main;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr ;
     grid-gap: 10px;
     grid-template-areas:
-      "aside1 section1 section1 aside2"
-      "aside1 section2 section2 aside2";
-    height: 100%;
+      "aside1 section1  aside2"
+      "aside1 section2  aside2";
+    background-color: rgb(168, 168, 175);
   }
-  
   section:nth-of-type(1) {
     grid-area: section1;
+    background-color: blueviolet;
   }
-  
-  section:nth-of-type(2) {
+  section:nth-of-type(2){
     grid-area: section2;
+    background-color: brown;
   }
-  
   .aside1 {
     grid-area: aside1;
+    background-color: aquamarine;
   }
-  
   .aside2 {
     grid-area: aside2;
-  
+    background-color: rgb(136, 187, 60);
   }
-  
   footer {
     grid-area: footer;
     text-align: center;
     padding: 20px;
     border-top: 2px solid #000;
+    background-color: cadetblue;
   }
-  
   header, section, .aside1, .aside2, footer {
     padding: 20px;
     border: 1px solid #000;
