--- a/aula19-03/style.css
+++ b/aula19-03/style.css
@@ -10,4 +10,46 @@ header{
     width: 90rem;
     height: 8.1875rem;
     background: #D9D9D9;
+    padding: 2rem;
+}
+
+main{
+    width: 84.9375rem;
+    height: 48.5625rem;
+    background: #D9D9D9;
+    display: flex;
+    justify-content: right;
+    padding: 2rem;
+}
+
+section{
+  padding: 2rem;
+    width: 36.5rem;
+    height: 46.5625rem;
+    border-radius: 0.3125rem;
+    border: 1px solid rgba(0, 0, 0, 0.00);
+    background: #2CFDFD;
+
+}
+
+.login{
+    width: 20.625rem;
+    height: 20.1875rem;
+    fill: rgba(244, 236, 236, 0.36);
+    stroke-width: 3px;
+    stroke: #000;
+}
+
+.cadastro{
+    width: 34.9375rem;
+    height: 13.4375rem;
+    fill: rgba(244, 236, 236, 0.36);
+    stroke-width: 3px;
+    stroke: #000;
+}
+
+footer{
+    width: 90rem;
+    height: 4.3125rem;
+    background: #D9D9D9;
 }
