--- a/aula19-03/style.css
+++ b/aula19-03/style.css
@@ -2,20 +2,21 @@
     margin: 0;
     padding: 0;
 }
-
 body{
     background: #050505;
 }
 header{
-    width: 90rem;
-    height: 8.1875rem;
+    width:100vw;
+    height: auto;
     background: #D9D9D9;
     padding: 2rem;
+    text-align: center;   
 }
 
 main{
+    margin:1rem auto;
     width: 84.9375rem;
-    height: 48.5625rem;
+    height: auto;
     background: #D9D9D9;
     display: flex;
     justify-content: right;
@@ -23,33 +24,95 @@ main{
 }
 
 section{
-  padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
     width: 36.5rem;
     height: 46.5625rem;
     border-radius: 0.3125rem;
     border: 1px solid rgba(0, 0, 0, 0.00);
     background: #2CFDFD;
+    align-items: center;
 
+}
+h2{
+    color: #000;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-style: normal;
+    text-align: center;
+    padding: 1rem;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+label{
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .login{
-    width: 20.625rem;
-    height: 20.1875rem;
-    fill: rgba(244, 236, 236, 0.36);
-    stroke-width: 3px;
-    stroke: #000;
+    width:20rem;
+    padding: 1rem;
+    height: auto;
+    display: flex;
+    border: 1px solid;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+.login form{
+    display: flex;
+    max-width: 15rem;
+    flex-direction: column;
+}
+ input{
+    margin:0.5rem;
 }
 
+.botao{
+    margin: 0.5rem;
+    background-color: violet;
+    border-radius: 1rem;
+    height: 2rem;
+    width: auto;
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 .cadastro{
-    width: 34.9375rem;
+    width: 34rem;
     height: 13.4375rem;
-    fill: rgba(244, 236, 236, 0.36);
-    stroke-width: 3px;
-    stroke: #000;
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cadastro form{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: auto;
 }
 
 footer{
-    width: 90rem;
+    width: 100vw;
     height: 4.3125rem;
     background: #D9D9D9;
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
