--- a/aula19-03/style.css
+++ b/aula19-03/style.css
@@ -19,7 +19,7 @@ main{
     height: auto;
     background: #D9D9D9;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     padding: 2rem;
 }
 
